--- a/tpl/wechat/index/sheet.htm
+++ b/tpl/wechat/index/sheet.htm
@@ -32,9 +32,21 @@
 </script>
 
 <!-- 主体页面 -->
-<div class="wx_view">
-    <div class="wx_col_item" id="card_book">
-        <div class="wx_row_item card_book">
+<div class="wx_view" id="wx_view">
+    <div class="card_book_loading">
+        <p>资料加载中...</p>
+    </div>
+    <div class="wx_col_item card_book" style="display: none;">
+        <div class="alert alert-info card_book_alert uploading_alert" role="alert" style="display: none;">
+            <i class="fa fa-upload" aria-hidden="true"></i>图片上传中，请稍后...
+        </div>
+        <div class="alert alert-success card_book_alert upload_success_alert" role="alert" style="display: none;">
+            <i class="fa fa-check" aria-hidden="true"></i>讯息：图片上传成功！
+        </div>
+        <div class="alert alert-danger card_book_alert upload_fail_alert" role="alert" style="display: none;">
+            <i class="fa fa-exclamation" aria-hidden="true"></i>错误：图片上传失败！
+        </div>
+        <div class="wx_row_item card_book_page">
             <div class="card" v-for="photo in photosList">
                 <!-- FIXME: 目前的所有图片都是通过微信压缩，然后获取的原图。这样早晚会流量爆炸的... -->
                 <div class="card_body" v-bind:style="{'background-image':'url('+__imgRoot+photo.imgUrl+')'}">
@@ -51,7 +63,7 @@
                 </div>
             </div>
             <div class="card add_card_btn" id="add_card_btn" v-on:click="addPhoto()">
-                <i class="fa fa-plus" style="font-size: 64px;"></i>
+                <i class="fa fa-plus" style="padding-right: 0px; font-size: 4em;"></i>
                 <div>点击添加图片</div>
             </div>
         </div>
@@ -63,11 +75,11 @@
 </div>
 
 <!-- 添加卡片提示框 -->
-<div class="modal" id="add_photo_modal" tabindex="-1" role="dialog">
+<div class="modal" id="add_photo_modal" tabindex="-1" role="dialog" data-backdrop="static">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <strong style="font-size: 20px;">提交图片</strong>
+                <strong style="font-size: 1.5em;">提交图片</strong>
             </div>
             <div class="modal-body">
                 <img id="add_photo_modal_img" v-bind:src="imgUrl">
@@ -82,11 +94,11 @@
 </div>
 
 <!-- 修改卡片提示框 -->
-<div class="modal" id="modify_photo_modal" tabindex="-1" role="dialog">
+<div class="modal" id="modify_photo_modal" tabindex="-1" role="dialog" data-backdrop="static">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <strong style="font-size: 20px;">修改备注信息</strong>
+                <strong style="font-size: 1.5em;">修改备注信息</strong>
             </div>
             <div class="modal-body">
                 <img id="modify_photo_modal_img" v-bind:src="__imgRoot+photo.imgUrl">
