1 Fixed home.htm to make wechat nickname center; 2 Fixed tasks.class.php to make expired task cannot display;

--- a/tpl/wechat/index/home.htm
+++ b/tpl/wechat/index/home.htm
@@ -4,7 +4,7 @@
     <div id="task-wrapper">
         <div class="userinfo">
             <div class=""><img src="{:$user['face']}" class="img-responsive img-circle"></div>
-            <div class=""><p>{:$user["nickname"]}</p></div>
+            <div class="text-center"><p>{:$user["nickname"]}</p></div>
         </div>
         <div class="tip" v-if="pagestatus == 0">
             <p>正在加载，请稍候...</p>
