1 add canecl_btn in wechat/index/home.htm

--- a/tpl/wechat/index/home.htm
+++ b/tpl/wechat/index/home.htm
@@ -41,6 +41,7 @@
             <div class="task-operations">
                 <a class="weui_btn weui_btn_primary" v-bind:href="userinfo.tasks[viewtaskkey].project.word">问卷下载</a>
                 <button class="weui_btn weui_btn_primary" v-on:click="gosheet">提交任务</button>
+                <button class="weui_btn weui_btn_primary" v-on:click="canceltask">放弃任务</button>
                 <button class="weui_btn weui_btn_primary" v-on:click="goback">返回</button>
             </div>
         </div>
