1 move modify_project_btn to project/view.htm. 2 remove download_file_btn in project/index.htm.

--- a/tpl/admin/project/index.htm
+++ b/tpl/admin/project/index.htm
@@ -26,12 +26,12 @@
                         <div class='type'>时限：{:$limit_time}</div>
                         <!--<div class='type'>状态：{:$status}</div>-->
                         <div style='margin-bottom: 3px;'>
-                            <a href='{:$paperfile_url}'><div class='btn btn-success'>下载文件</div></a>
+                            <!--<a href='{:$paperfile_url}'><div class='btn btn-success'>下载文件</div></a>-->
                             <a href='?admin/task/index&projectmuffinid={:$muffinid}'><div class='btn btn-default'>任务列表</div></a>
                         </div>
                         <div>
                             <div class='btn btn-danger del_btn' data-toggle="modal" data-target="#myModal" >删除项目</div>
-                            <a href='?admin/project/new&projectmuffinid={:$muffinid}'><div class='btn btn-primary modify_btn'>编辑项目</div></a>
+                            <!--<a href='?admin/project/new&projectmuffinid={:$muffinid}'><div class='btn btn-primary modify_btn'>编辑项目</div></a>-->
                         </div>
                     </div>
                 </div>
