--- a/tpl/admin/project/view.htm
+++ b/tpl/admin/project/view.htm
@@ -16,7 +16,7 @@
         <li class="active">新建项目</li>
       </ol>-->
       <h3>
-        查看项目<a href='?admin/task/new&muffinid={:$muffinid}'><button class='btn btn-success' style='display:inline-block; float: right;'>新建任务</button></a>
+        查看项目<a href='?admin/task/new&muffinid={:$muffinid}'><button class='btn btn-success' style='display:inline-block; float: right;'>新建任务</button></a><a href='?admin/project/new&projectmuffinid={:$muffinid}'><button class='btn btn-primary' style='display:inline-block; float: right; margin-right: 15px;'>编辑项目</button></a>
       </h3><hr>
         <form>
           <div class="form-group">
