1 download_file will renamed to project_title.

--- a/tpl/admin/project/view.htm
+++ b/tpl/admin/project/view.htm
@@ -58,7 +58,7 @@
           
           <div class="form-group">
             <label for="limit_time">试卷</label><br>
-            <a href='{:$project->paperfile_url()}'><div class='btn btn-success'>点击下载试卷</div></a>
+            <a download='{:$project->title()}' href='{:$project->paperfile_url()}'><div class='btn btn-success'>点击下载试卷</div></a>
           </div>
 
           
