1 fixed bugs with spelling error 'provice' and sql repaired too. 2 move title_input behind district in task/new.htm. 3 choosing district could choose none in task/new.htm.

--- a/tpl/admin/task/index.htm
+++ b/tpl/admin/task/index.htm
@@ -17,10 +17,10 @@
             $wechat_userid = $task->wechat_userid();
             $location = $task->location();
             $location = json_decode($location);
-            $provice = $location->provice->title;
+            $province = $location->province->title;
             $city = $location->city->title;
             $district = $location->district->title;
-            $location_show = $provice . " " . $city ." " . $district;
+            $location_show = $province . " " . $city ." " . $district;
             $status = $task->status();
             $status_show = $show_status[$status];
         ?>
