1 the task name will be auto filled while choosing loction.

--- a/tpl/admin/task/new.htm
+++ b/tpl/admin/task/new.htm
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div style='display: inline-block;'>
-                <input type="text" class="" id="fourthloc" placeholder="第四级别区域"
+                <input onkeyUp='update_loc()' type="text" class="" id="fourthloc" placeholder="第四级别区域"
             value='<?php echo $task->is_valid() ? $task->fourthloc() : null?>'>
             </div>
           </div>
