--- a/tpl/admin/task/new.htm
+++ b/tpl/admin/task/new.htm
@@ -32,7 +32,7 @@
       <h3>新建任务</h3><hr>
         <form>
             <div class="form-group">
-                <label for="dropdownMenu1">请选择所属项目</label>
+                <label for="dropdownMenu1">请选择所属项目<span style='color: red;'>&nbsp*</span></label>
                 <div class="dropdown">
                   <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                   <?php
@@ -56,7 +56,7 @@
 
           <div class="form-group">
             <div style='display: inline-block;'>
-                <label for="location">请选择市区</label>
+                <label for="location">请选择市区<span style='color: red;'>&nbsp* <small>1级和2级区域必选</small></span></label>
                 <div data-toggle="distpicker" id='distpicker' data-value-type="code">
                   <select id='province'></select>
                   <select id='city' ></select>
@@ -69,12 +69,12 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="title">请输入名称</label>
+            <label for="title">请输入名称<span style='color: red;'>&nbsp*</span></label>
             <input type="text" class="form-control" id="title" placeholder="任务名称"
             value='<?php echo $task->is_valid() ? $task->title() : null?>'>
           </div>
           <div class="form-group">
-            <label for="address">请输入详细地址</label>
+            <label for="address">请输入详细地址<span style='color: red;'>&nbsp*</span></label>
             <input class="form-control" type='text' id="address"
             value='<?php echo $task->is_valid() ? $task->address() : null?>'>
           </div>
