--- a/tpl/admin/project/index.htm
+++ b/tpl/admin/project/index.htm
@@ -28,6 +28,7 @@
                         <div style='margin-bottom: 3px;'>
                             <a href='{:$paperfile_url}'><div class='btn btn-success'>下载文件</div></a>
                             <a href='?admin/task/index&projectmuffinid={:$muffinid}'><div class='btn btn-default'>任务列表</div></a>
+                            <a href='?admin/questionnaire/edit&projectmuffinid={:$muffinid}'><div class='btn btn-default'>问卷</div></a>
                         </div>
                         <div>
                             <div class='btn btn-danger del_btn' data-toggle="modal" data-target="#myModal" >删除项目</div>
