--- a/tpl/wechat/header.htm
+++ b/tpl/wechat/header.htm
@@ -8,10 +8,10 @@
 
         <link rel="stylesheet" href="[:vendor]/bootstrap/css/bootstrap.css" type="text/css">
         <link rel="stylesheet" href="[:vendor]/font-awesome/css/font-awesome.min.css">
-        <!--<link rel="stylesheet" href="[:vendor]/sb-admin/sb-admin-2.min.css">-->
-        <link rel="stylesheet" href="[:vendor]/jquery-ui-1.12.1/jquery-ui.min.css">
-        <link rel="stylesheet" href="[:vendor]/jquery-ui-1.12.1/jquery-ui.theme.min.css">
-        <link rel="stylesheet" href="[:vendor]/jquery-ui-1.12.1/jquery-ui.structure.min.css">
+        <!-- <link rel="stylesheet" href="[:vendor]/sb-admin/sb-admin-2.min.css"> -->
+        <!-- <link rel="stylesheet" href="[:vendor]/jquery-ui-1.12.1/jquery-ui.min.css"> -->
+        <!-- <link rel="stylesheet" href="[:vendor]/jquery-ui-1.12.1/jquery-ui.theme.min.css"> -->
+        <!-- <link rel="stylesheet" href="[:vendor]/jquery-ui-1.12.1/jquery-ui.structure.min.css"> -->
         <link rel="stylesheet" href="[:vendor]/bootstrap-select/bootstrap-select.min.css">
 
         <link rel="stylesheet" href="[:app]/css/main.css">
@@ -23,8 +23,8 @@
         <script src="[:vendor]/jquery/jquery-2.1.1.min.js"></script>
         <script src="[:vendor]/bootstrap/js/bootstrap.min.js"></script>
         <script src="[:vendor]/metisMenu/metisMenu.min.js"></script>
-        <!--<script src="[:vendor]/sb-admin/sb-admin-2.min.js"></script>-->
-        <script src="[:vendor]/jquery-ui-1.12.1/jquery-ui.min.js"></script>
+        <!-- <script src="[:vendor]/sb-admin/sb-admin-2.min.js"></script> -->
+        <!-- <script src="[:vendor]/jquery-ui-1.12.1/jquery-ui.min.js"></script> -->
         <script src="[:vendor]/bootstrap-select/bootstrap-select.min.js"></script>
         <script src="[:vendor]/distpicker/distpickerXbootstrap-select.min.js"></script>
         <script src="[:vendor]/vue/vue.js"></script>
