--- a/tpl/admin/task/index.htm
+++ b/tpl/admin/task/index.htm
@@ -6,6 +6,9 @@
     <hr>
     <?php
     //var_dump($wechatusers);
+    $ret = strpos('北京市','北京市');
+    var_dump($ret);
+    
     $show_status = array('未领取', '已领取', '审核失败' ,'任务完成');
     if (!empty($tasks)) {
         foreach ($tasks as $task) {
