add instruction in the broadcast_area_setting modal.

--- a/tpl/admin/task/index.htm
+++ b/tpl/admin/task/index.htm
@@ -134,7 +134,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="broadCastModalLabel">请选择要推送到地其他区域</h4>
+        <h4 class="modal-title" id="broadCastModalLabel">请选择要推送到地其他区域<br><small>推送完成后，如下区域的调查员也可领取此任务</small></h4>
       </div>
       <div class="modal-body">
           <div class='broadcast_area_list'></div>
