--- a/tpl/admin/header.htm
+++ b/tpl/admin/header.htm
@@ -12,9 +12,9 @@
         <link rel="stylesheet" href="[:vendor]/jquery-ui-1.12.1/jquery-ui.min.css">
         <link rel="stylesheet" href="[:vendor]/jquery-ui-1.12.1/jquery-ui.theme.min.css">
         <link rel="stylesheet" href="[:vendor]/jquery-ui-1.12.1/jquery-ui.structure.min.css">
-        <!--<link rel="stylesheet" href="[:vendor]/datatables/css/jquery.dataTables.css">-->
-        <link rel="stylesheet" href="[:vendor]/datatables-plugins/dataTables.bootstrap.css">
-        <link rel="stylesheet" href="[:vendor]/datatables-responsive/dataTables.responsive.css">
+        <link rel="stylesheet" href="[:vendor]/datatables/css/jquery.dataTables.css">
+        <!--<link rel="stylesheet" href="[:vendor]/datatables-plugins/dataTables.bootstrap.css">
+        <link rel="stylesheet" href="[:vendor]/datatables-responsive/dataTables.responsive.css">-->
         
         <link rel="stylesheet" href="[:app]/css/main.css">
         <link rel="stylesheet" href="[:app]/css/modify-on-click.css">
@@ -26,15 +26,16 @@
         <script src="[:vendor]/jquery-ui-1.12.1/jquery-ui.min.js"></script>
         <script src="[:vendor]/distpicker/distpicker.js"></script>
         <script src="[:vendor]/vue/vue.js"></script>
-        <!--<script src="[:vendor]/datatables/js/jquery.dataTables.js"></script>
-        <script src="[:vendor]/datatables-plugins/dataTables.bootstrap.js"></script>-->
+        <script src="[:vendor]/datatables/js/jquery.dataTables.js"></script>
+        <!--<script src="[:vendor]/datatables-plugins/dataTables.bootstrap.js"></script>
         <script src="[:vendor]/datatables-plugins/jquery.dataTables.js"></script>
-        <script src="[:vendor]/datatables-responsive/dataTables.responsive.js"></script>
+        <script src="[:vendor]/datatables-responsive/dataTables.responsive.js"></script>-->
         
         <script src="[:app]/js/main.js"></script>
         <script src="[:app]/js/picservice.js"></script>
         <script src="[:app]/js/calendar.js"></script>
         <script src="[:app]/js/modify-on-click.js"></script>
+
         <title> 预约系统 </title>
     </head>
 
