--- a/tpl/admin/project/index.htm
+++ b/tpl/admin/project/index.htm
@@ -1,52 +1,109 @@
 <div id="page-wrapper">
     <div class="clear">
-    <h3>项目列表 <a href='?admin/task/new'><button class='btn btn-success' style='display:inline-block; float: right;'>新建任务</button></a><a href='?admin/project/new'><button class='btn btn-success' style='display:inline-block; float: right; margin-right: 15px;'>新建项目</button></a></h3>
+    <h3>项目列表
+<a href='?admin/project/index&flag=1'><span class='fa fa-list'></a>
+<a href='?admin/project/index&flag=0'></span><span class='fa fa-image'></span></a> 
+<a href='?admin/task/new'><button class='btn btn-success' style='display:inline-block; float: right;'>新建任务</button></a>
+<a href='?admin/project/new'><button class='btn btn-success' style='display:inline-block; float: right; margin-right: 15px;'>新建项目</button></a></h3>
     <hr>
     <?php
-    //var_dump($all_projects);
-    $show_status = array('未发布', '进行中', '项目暂停' ,'已过期');
-    if (!empty($all_projects)) {
-        foreach ($all_projects as $project) {
-            $project_id = $project->project_id();
-            $muffinid = $project->muffinid();
-            $type = $project->type();
-            $title = $project->title();
-            $description = $project->description();
-            $cover_thumbnail_url = $project->cover_thumbnail_url();
-            $limit_time = $project->limit_time();
-            $status = $project->status();
-            $is_expired = $project->is_expired();
-            $status_show = $is_expired ? $show_status[3] : $show_status[$status];
-            $paperfile_url = $project->paperfile_url();
-        ?>
-            <div class='project_elf' muffinid='{:$muffinid}'>
-                <div class='project_info'>
-                    <div class='cover_thumbnail'><a href='?admin/project/view&projectmuffinid={:$muffinid}'><img src='{:$cover_thumbnail_url}'></a></div>
-                    <div class='project_info_right'>
-                        <div class='project_id'>编号：{:$project_id}</div>
-                        <div class='title'>名称：{:$title}</div>
-                        <div class='type'>类别：{:$type}</div>
-                        <div class='status'>状态：{:$status_show}</div>
-                        <div class='limit_time'>时限：{:$limit_time}</div>
-                        <div style='margin-bottom: 3px;'>
-                            <a href='?admin/task/index&projectmuffinid={:$muffinid}'><div class='btn btn-default'>任务列表</div></a>
-                            <?php
-                            if (($status == 0 || $status == 2)&& !$is_expired) {
-                                ?><div class='btn btn-success update_status_btn' sid='1'>启动项目</div><?php
-                            }else if ($status == 1 && !$is_expired) {
-                                ?><div class='btn btn-success update_status_btn' sid='2'>暂停项目</div><?php
-                            }
-                            ?>
-                        </div>
-                        <div>
-                            <div class='btn btn-danger del_btn' data-toggle="modal" data-target="#myModal" >删除项目</div>
+    if ($flag == 0) {
+        //var_dump($all_projects);
+        $show_status = array('未发布', '进行中', '项目暂停' ,'已过期');
+        if (!empty($all_projects)) {
+            foreach ($all_projects as $project) {
+                $project_id = $project->project_id();
+                $muffinid = $project->muffinid();
+                $type = $project->type();
+                $title = $project->title();
+                $description = $project->description();
+                $cover_thumbnail_url = $project->cover_thumbnail_url();
+                $limit_time = $project->limit_time();
+                $status = $project->status();
+                $is_expired = $project->is_expired();
+                $status_show = $is_expired ? $show_status[3] : $show_status[$status];
+                $paperfile_url = $project->paperfile_url();
+            ?>
+                <div class='project_elf' muffinid='{:$muffinid}'>
+                    <div class='project_info'>
+                        <div class='cover_thumbnail'><a href='?admin/project/view&projectmuffinid={:$muffinid}'><img src='{:$cover_thumbnail_url}'></a></div>
+                        <div class='project_info_right'>
+                            <div class='project_id'>编号：{:$project_id}</div>
+                            <div class='title'>名称：{:$title}</div>
+                            <div class='type'>类别：{:$type}</div>
+                            <div class='status'>状态：{:$status_show}</div>
+                            <div class='limit_time'>时限：{:$limit_time}</div>
+                            <div style='margin-bottom: 3px;'>
+                                <a href='?admin/task/index&projectmuffinid={:$muffinid}'><div class='btn btn-default'>任务列表</div></a>
+                                <?php
+                                if (($status == 0 || $status == 2)&& !$is_expired) {
+                                    ?><div class='btn btn-success update_status_btn' sid='1'>启动项目</div><?php
+                                }else if ($status == 1 && !$is_expired) {
+                                    ?><div class='btn btn-success update_status_btn' sid='2'>暂停项目</div><?php
+                                }
+                                ?>
+                            </div>
+                            <div>
+                                <div class='btn btn-danger del_btn' data-toggle="modal" data-target="#myModal" >删除项目</div>
+                            </div>
                         </div>
                     </div>
+                    <div class='description'>摘要：{:$description}</div>
                 </div>
-                <div class='description'>摘要：{:$description}</div>
-            </div>
-        <?php
+            <?php
+            }
         }
+    } else if ($flag == 1) {
+    ?>
+    <table class='table table-condensed' id='projects_table'>
+      <thead><tr>
+        <td>编号</td>
+        <td>名称</td>
+        <td>类别</td>
+        <td>状态</td>
+        <td>时限</td>
+        <td>操作</td>
+      </tr></thead><tbody>
+    <?php
+        $show_status = array('未发布', '进行中', '项目暂停' ,'已过期');
+        if (!empty($all_projects)) {
+            foreach ($all_projects as $project) {
+                $project_id = $project->project_id();
+                $muffinid = $project->muffinid();
+                $type = $project->type();
+                $title = $project->title();
+                $description = $project->description();
+                $cover_thumbnail_url = $project->cover_thumbnail_url();
+                $limit_time = $project->limit_time();
+                $status = $project->status();
+                $is_expired = $project->is_expired();
+                $status_show = $is_expired ? $show_status[3] : $show_status[$status];
+                $paperfile_url = $project->paperfile_url();
+      ?>
+      <tr class='project_elf' muffinid='{:$muffinid}'>
+        <td>{:$project_id}</td>
+        <td>{:$title}</td>
+        <td>{:$type}</td>
+        <td>{:$status_show}</td>
+        <td>{:$limit_time}</td>
+        <td>
+            <a href='?admin/task/index&projectmuffinid={:$muffinid}'><div class='btn btn-default'>任务列表</div></a>
+            <?php
+            if (($status == 0 || $status == 2)&& !$is_expired) {
+                ?><div class='btn btn-success update_status_btn' sid='1'>启动项目</div><?php
+            }else if ($status == 1 && !$is_expired) {
+                ?><div class='btn btn-success update_status_btn' sid='2'>暂停项目</div><?php
+            }
+            ?>
+            <div class='btn btn-danger del_btn' data-toggle="modal" data-target="#myModal" >删除项目</div>
+        </td>
+      </tr>
+    <?php
+            }
+        }
+    ?></tbody>
+    </table>
+    <?php
     }
     ?>
     </div>
