fixed bugs with css in project/index.css. add view link in list_view

--- a/tpl/admin/project/index.htm
+++ b/tpl/admin/project/index.htm
@@ -82,7 +82,7 @@
       ?>
       <tr class='project_elf' muffinid='{:$muffinid}'>
         <td>{:$project_id}</td>
-        <td>{:$title}</td>
+        <td><a href='?admin/project/view&projectmuffinid={:$muffinid}'>{:$title}</a></td>
         <td>{:$type}</td>
         <td>{:$status_show}</td>
         <td>{:$limit_time}</td>
